<resources>
    <string name="app_name">AMEJA</string>
    <string name="title_home">Home</string>
    <string name="title_schedule">Schedule</string>
    <string name="title_achievement">Achievement</string>
    <string name="title_article">Article</string>

    <string name="add_schedule">Add Schedule</string>
    <string name="agenda">Agenda</string>
    <string name="_00_00">00:00</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="today_schedule">Today Schedule</string>
    <string name="weekly_schedule">Weekly Schedule</string>
    <string name="monthly_schedule">Monthly Schedule</string>
    <string name="monthly_achievement">Monthly Achievement</string>
    <string name="weekly_progress">Weekly Progress</string>
    <string name="weekly">Weekly</string>
    <string name="april">April</string>
    <string name="total_agenda">Total Agenda</string>
    <string name="not_completed">Not Completed</string>
    <string name="completed">Completed</string>
    <string name="important_schedule">Important Schedule</string>
    <string name="monthly">Monthly</string>
    <string name="location">Location</string>
    <string name="article_full">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        Arcu semper sed consequat massa, ac lorem arcu arcu, diam.
        Habitant rhoncus elementum nunc, maecenas purus.
        Maecenas sit elit senectus eros, sit malesuada eget cras risus.
        Convallis condimentum ultrices vitae porttitor. Elit risus lobortis viverra habitant duis.
        Morbi turpis hendrerit elit urna neque lacus urna venenatis felis.
        Nec faucibus mi maecenas augue condimentum egestas.
        Pellentesque egestas integer ut nisi, imperdiet euismod ut in.
        Nibh dictumst faucibus neque nunc felis. Mauris suspendisse egestas nunc nunc et urna.
        In varius nec rutrum viverra sagittis penatibus netus volutpat.
        Sit habitasse a, non amet. In commodo lectus nibh id fringilla.
        Massa, viverra mauris eget et nibh eu. Quis pharetra auctor nisl, aliquam.
        Tortor tincidunt faucibus eget ridiculus et ornare.
        Sit massa nec nisl vel elementum risus, non, aliquam.
        Feugiat elit adipiscing pharetra feugiat bibendum.
        Vitae nec eu, pellentesque egestas enim maecenas.
        Imperdiet in mi, euismod amet, faucibus. Et amet fermentum consequat at magna.
        Euismod adipiscing mattis lacus, lorem vulputate laoreet.
        Bibendum quis orci tristique eget penatibus est proin in vitae.
        Diam aliquam imperdiet mauris, dolor amet, convallis.
        Diam cursus netus dui neque suspendisse. Ornare id hendrerit mi viverra enim sem praesent.
        Facilisis sed adipiscing pretium id tempor lectus metus. Dictumst at faucibus urna sit eget vulputate.
        Eros, congue curabitur placerat ut imperdiet venenatis.
        Sagittis habitant urna quam donec eget molestie maecenas ut faucibus. Id mattis id dignissim nulla.
        Rhoncus, scelerisque massa venenatis, tincidunt. Faucibus dolor accumsan, a tincidunt.
        Amet et id nam natoque nulla placerat massa. Congue fusce morbi pharetra et ornare nibh malesuada.
        Sit a sagittis neque eget et amet, feugiat etiam congue.Massa nam hendrerit nunc elementum cursus eget donec.
        Magna euismod dui adipiscing ipsum.Tortor mus et praesent nisi ut tincidunt porta odio.
        Quis pharetra suspendisse ut massa amet nisi, tincidunt at. Morbi nec commodo sociis sed sed non.
        Pharetra elementum purus aliquam ut vitae rhoncus integer. Tellus viverra dignissim id arcu tortor.
        Sit id ultricies a in id nunc ornare. Morbi dolor purus suspendisse accumsan augue pharetra vulputate turpis dolor.
        Magna libero, diam massa id egestas non a gravida. Hendrerit tempor lectus ut arcu commodo enim egestas ipsum.
        Vestibulum blandit in dignissim arcu. </string>
    <string name="setting_button">Setting Button</string>
    <string name="today_s_schedule">Today\'s Schedule</string>
    <string name="schedule_list">Schedule List</string>
    <string name="article_image">Article Image</string>
    <string name="no_schedule">There\'s no schedule for today</string>
    <string name="update_success">Schedule successfully updated</string>
    <string name="update_fail">Schedule failed to be updated</string>
    <string name="add_success">Schedule successfully added</string>
    <string name="add_fail">Schedule failed to be added</string>
    <string name="at">\ at\ \ </string>
    <string name="today">Today</string>
    <string name="delete_success">\ successfully deleted</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="update_schedule">Update Schedule</string>
    <string name="hi">Hi,</string>
    <string name="welcome">Welcome!</string>
</resources>
