<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.papb2.ameja.ui.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_schedule"
        android:name="com.papb2.ameja.ui.ScheduleFragment"
        android:label="@string/title_schedule"
        tools:layout="@layout/fragment_schedule" />

    <fragment
        android:id="@+id/navigation_achievement"
        android:name="com.papb2.ameja.ui.AchievementFragment"
        android:label="@string/title_achievement"
        tools:layout="@layout/fragment_achievement" />

    <fragment
        android:id="@+id/navigation_article"
        android:name="com.papb2.ameja.ui.ArticleFragment"
        android:label="@string/title_article"
        tools:layout="@layout/fragment_article" />
</navigation>
