<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MonthlyAchievementFragment">

    <TextView
        android:id="@+id/tvTitle"
        style="@style/titleStyle"
        android:text="@string/title_achievement"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnMode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_mode"
        android:drawableEnd="@drawable/ic_keyboard_arrow_down_black_24dp"
        android:padding="8dp"
        android:text="@string/monthly"
        android:textAllCaps="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <com.anychart.AnyChartView
        android:id="@+id/any_chart_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@id/lblTotal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnMode" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/any_chart_view"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/any_chart_view" />

    <TextView
        android:id="@+id/lblTotal"
        style="@style/totalLabelStyle"
        android:text="@string/total_agenda"
        app:layout_constraintBottom_toTopOf="@id/lblCompleted"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/lblCompleted"
        style="@style/completedLabelStyle"
        android:text="@string/completed"
        app:layout_constraintBottom_toTopOf="@id/lblNotCompleted"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/lblNotCompleted"
        style="@style/notCompletedLabelStyle"
        android:layout_marginBottom="32dp"
        android:text="@string/not_completed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/tvTotal"
        style="@style/totalLabelStyle"
        android:text="60"
        app:layout_constraintBaseline_toBaselineOf="@id/lblTotal"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/tvCompleted"
        style="@style/completedLabelStyle"
        android:text="54"
        app:layout_constraintBaseline_toBaselineOf="@id/lblCompleted"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/tvNotCompleted"
        style="@style/notCompletedLabelStyle"
        android:text="6"
        app:layout_constraintBaseline_toBaselineOf="@id/lblNotCompleted"
        app:layout_constraintRight_toRightOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>